finished part 1 of django tutorial.

--- a/notes/Part/1.md
+++ b/notes/Part/1.md
@@ -11,14 +11,94 @@
     1. start project: `django-admin startproject core .`
         * project_folder/       # root directory
             - manage.py         # command line utility
-            - core/             # project python package
-                * __init__.py
-                * settings.py
-                * urls.py
-                * asgi.py
-                * wsgi.py 
+            - core/             # python package project directory
+                * __init__.py       # tells python this dir is a python package
+                * settings.py   # django project settings
+                * urls.py       # url declarations, aka URLconfs
+                * asgi.py       # entry-point for ASGI-compatible web servers
+                * wsgi.py       # entry-point for WSGI-compatible web servers
     3. test: `python manage.py runserver`
     4. start application: `python manage.py startapp my_app`
-        * 
+        * my_app/               # app directory
+            - __init__.py           # tells python this dir is a python package
+            - admin.py          #
+            - apps.py           #
+            - migrations/       #
+                * __init__.py       #
+            - models.py         #
+            - tests.py          # file to store and execute tests
+            - views.py          # takes http requests & returns http responses
+            - (urls.py)         # not generated automatically; declare app urls
+
+* Project vs. Application
+    - Project: a collection of configurations & apps for a particular website
+    - Application: a web app that does something; eg. blog, poll, game, etc
+    - projects can contain mnany apps, apps can be in multiple projects
+
+* Creating a View
+    - in my_app/views.py
+        ```python3
+        from django.http import HttpResponse
+        
+        def index(request):
+            return HttpResponse("Hello world.")
+        ```
+    - create my_app/urls.py
+        * `''`: url string path 
+        * `views.index`: the index function in views.py
+        * `name='index'`: ???
+        ```python3
+        from django.urls import path
+        
+        from . import views
+        
+        urlpatterns = [
+            path('', views.index, name='index')
+        ]
+        ```
+    - in core/urls.py
+        * `'polls/'`: url string path
+        * `include()`: allows referencing of other URLconfs (urls.py)
+            - always use include() to include other URL patterns
+            - `adin.site.urls` is the only exception
+        * `'polls.urls'`: polls/urls.py
+        ```python3
+        from django.contrib import admin
+        from django.urls import include, path   # add include
+        
+        urlpatterns = [
+            path('polls/', include('polls.urls')),
+            path('admin/', admin.site.urls),
+        ]
+        ```
+    - run: `python manage.py runserver`
+
+* `path()` breakdown
+    ```python3
+    path('my_app/', include('polls.urls'))
+    ```
+    - path() takes four arguments
+        1. **route**    necessary
+        2. **view**     necessary
+        3. *kwargs*   optional
+        4. *name*     optional
+    - **route**: a string that contains a URL pattern
+        * requests start from the top until it finds a match
+        * patterns don't search GET, POST, nor domain name
+            - URLconf only looks for my_app/
+            - example.com/my_app/
+            - example.com/my_app/?page=3
+    - **view**: the specified function to call on a url-route match
+        * the function is called with an HttpRequest object as the first arg
+        * any "captured" values from the route become keyword arguments
+    - *kwargs*: arbitrary arguments passed down via dictionary to target view
+    - *name*: provides unambiguous reference to URL path
+    
+* Summary
+    1. create function in app/views.py
+    2. tie views.function to url path in app/urls.py
+    3. append app app.urls to core/urls.py
+    4. `python manage.py runserver`
+
 
 [index](../index.md)
