finished part 2 notes, started part 3.

--- a/notes/Part/1.md
+++ b/notes/Part/1.md
@@ -18,8 +18,8 @@
                 * asgi.py       # entry-point for ASGI-compatible web servers
                 * wsgi.py       # entry-point for WSGI-compatible web servers
     3. test: `python manage.py runserver`
-    4. start application: `python manage.py startapp my_app`
-        * my_app/               # app directory
+    4. start application: `python manage.py startapp app`
+        * app/               # app directory
             - __init__.py           # tells python this dir is a python package
             - admin.py          #
             - apps.py           #
@@ -36,14 +36,14 @@
     - projects can contain mnany apps, apps can be in multiple projects
 
 * Creating a View
-    - in my_app/views.py
+    - in app/views.py
         ```python3
         from django.http import HttpResponse
         
         def index(request):
             return HttpResponse("Hello world.")
         ```
-    - create my_app/urls.py
+    - create app/urls.py
         * `''`: url string path 
         * `views.index`: the index function in views.py
         * `name='index'`: ???
@@ -57,17 +57,17 @@
         ]
         ```
     - in core/urls.py
-        * `'polls/'`: url string path
+        * `'app/'`: url string path
         * `include()`: allows referencing of other URLconfs (urls.py)
             - always use include() to include other URL patterns
-            - `adin.site.urls` is the only exception
-        * `'polls.urls'`: polls/urls.py
+            - `admin.site.urls` is the only exception
+        * `'app.urls'`: app/urls.py
         ```python3
         from django.contrib import admin
         from django.urls import include, path   # add include
         
         urlpatterns = [
-            path('polls/', include('polls.urls')),
+            path('app/', include('app.urls')),
             path('admin/', admin.site.urls),
         ]
         ```
@@ -75,7 +75,7 @@
 
 * `path()` breakdown
     ```python3
-    path('my_app/', include('polls.urls'))
+    path('app/', include('app.urls'))
     ```
     - path() takes four arguments
         1. **route**    necessary
@@ -85,9 +85,9 @@
     - **route**: a string that contains a URL pattern
         * requests start from the top until it finds a match
         * patterns don't search GET, POST, nor domain name
-            - URLconf only looks for my_app/
-            - example.com/my_app/
-            - example.com/my_app/?page=3
+            - URLconf only looks for app/
+            - example.com/app/
+            - example.com/app/?page=3
     - **view**: the specified function to call on a url-route match
         * the function is called with an HttpRequest object as the first arg
         * any "captured" values from the route become keyword arguments
