--- a/notes/Part/3.md
+++ b/notes/Part/3.md
@@ -1,2 +1,16 @@
+# Part 3: Views and Templates
+
+* Views: a "type" of webpage that serves a particular function
+    - for example, a blog might have the following views:
+        * Blog homepage
+        * Entry detail page
+        * year-based archive page
+        * month-based archive page
+        * day-based archive page
+        * comment action
+
+
+
+
 
 [index](../index.md)
