--- a/notes/Part/1.md
+++ b/notes/Part/1.md
@@ -36,17 +36,17 @@
     - projects can contain mnany apps, apps can be in multiple projects
 
 * Creating a View
-    - in app/views.py
+    - in **app/views.py**
         ```python3
         from django.http import HttpResponse
         
         def index(request):
             return HttpResponse("Hello world.")
         ```
-    - create app/urls.py
+    - create **app/urls.py**
         * `''`: url string path 
         * `views.index`: the index function in views.py
-        * `name='index'`: ???
+        * `name='index'`: used for URL tag later on
         ```python3
         from django.urls import path
         
@@ -56,7 +56,7 @@
             path('', views.index, name='index')
         ]
         ```
-    - in core/urls.py
+    - in **core/urls.py**
         * `'app/'`: url string path
         * `include()`: allows referencing of other URLconfs (urls.py)
             - always use include() to include other URL patterns
@@ -95,9 +95,9 @@
     - *name*: provides unambiguous reference to URL path
     
 * Summary
-    1. create function in app/views.py
-    2. tie views.function to url path in app/urls.py
-    3. append app app.urls to core/urls.py
+    1. create function in **app/views.py**
+    2. tie views.function to url path in **app/urls.py**
+    3. append app app.urls to **core/urls.py**
     4. `python manage.py runserver`
 
 
