--- a/notes/Part/2.md
+++ b/notes/Part/2.md
@@ -27,7 +27,7 @@
     - Models: database layouts with metadata
     - Models follow DRY (Don't Repeat Yourself) principles
     - breakdown
-        * `models.Model`: allows inheritance of Models class???
+        * `models.Model`: allows inheritance of database fields????
         * `models.CharField(max_length)`: character database field
         * `models.DateTimeField()`: datetime database field
         * `models.IntegerField()`: integer database field
