updated map to current.

--- a/notes/Part/1.md
+++ b/notes/Part/1.md
@@ -37,6 +37,8 @@
 
 * Creating a View
     - in **app/views.py**
+        * `request`: the actual https object that is sent to retrieve a page
+            - such object needs not show up in URLconfs
         ```python3
         from django.http import HttpResponse
         
@@ -83,7 +85,7 @@
         3. *kwargs*   optional
         4. *name*     optional
     - **route**: a string that contains a URL pattern
-        * requests start from the top until it finds a match
+        * URL requests start from the top until they find a match
         * patterns don't search GET, POST, nor domain name
             - URLconf only looks for app/
             - example.com/app/
