--- a/notes/Part/3.md
+++ b/notes/Part/3.md
@@ -139,7 +139,7 @@
             return render(request, 'polls/detail.html', {'question': question})
         ```
 
-* get_object_or_404(): a shortcut to the standard function above
+* `get_object_or_404()`: a shortcut to the standard function above
     - get_object_or_404() takes two arguments:
         * a django model as first arg
         * an arbitrary number of keyword arguments
