--- a/notes/Part/4.md
+++ b/notes/Part/4.md
@@ -19,10 +19,10 @@
     - breakdown:
         * each radio button is tied to the choice's **ID**
         * but the name of each button is "choice"
-        * that means that selecting a button & submitting will send:
+        * that means that selecting a radio button & submitting will send:
             - the **POST** data **choice=#** where **#** is the **ID**
         * the form's **action** is set to `{% url 'polls:vote' question.id %}`
-        * **methon="post"**: the act of submitting this form will alter data server-side
+        * **method="post"**: the act of submitting this form will alter data server-side
             - good web development practice
         * forloop.counter indicates how many times for tag has gone through its loop
         * **POST** forms need to be protected from **Cross Site Request Forgeries**
@@ -50,6 +50,7 @@
             else:
                 selected_choice.votes += 1
                 selected_choice.save()
+                
                 # Always return an HttpResponseRedirect after successfully dealing
                 # with POST data. This prevents data from being posted twice if a
                 # user hits the Back button.
@@ -150,7 +151,7 @@
             - it also specifies the template_name for the results list view
             - this ensures that the result & detail view have different appearances
         * previous templates have a context provided that contains:
-            - the quesiton and the latest_quesiton_list context variables
+            - the question and the latest_quesiton_list context variables
         * for DetailView, the question variable is provided automatically
             - since it uses the django model (Question)
             - it's also able to determine an appropriate name for the context variable
