introduced generic views to blog, added title links & appropriate model referencing.

--- a/notes/Part/3.md
+++ b/notes/Part/3.md
@@ -151,7 +151,8 @@
     - Django design philosophy is in favor of loose coupling between 
         * the model layer & the view layer
         * some controlled coupling is introduced with .shortcuts
-    - similar function: get_list_or_404(), uses filter() instead of get()
+    - similar function: get_list_or_404()
+        * uses filter() instead of get()
         * raises Http404 if list is empty
 
 
