--- a/content/blog/posts/2024-05-15.md
+++ b/content/blog/posts/2024-05-15.md
@@ -37,38 +37,38 @@ Moving around in Neovim is probably the hardest hurdle for most new users to get
 My best suggestion is to practice touch-typing. My second best suggestion is to experiment with all the motions Neovim has. Included below is a non-exhaustive list of motions you ought to at least know about. You need not use them all, but they might help you better understand how movement works in Neovim.
 
 Word Motions | Description
-------- | --------------
-`w`       |   Move 1 word forward, land on the first character.
-`b`       |   Move 1 word back, land on the first character.
-`e`       |   Move 1 word forward, land on the last character.
-`ge`      |   Move 1 word back, land on the last character.
+--- | ---
+`w` | Move 1 word forward, land on the first character.
+`b` | Move 1 word back, land on the first character.
+`e` | Move 1 word forward, land on the last character.
+`ge` | Move 1 word back, land on the last character.
 
 Object Motions | Description
-------- | --------------
-`(` |   Moves 1 sentence backward.
-`)` |   Moves 1 sentence forward.
-`{` |   Moves 1 paragraph backward.
-`}` |   Moves 1 paragraph forward.
+--- | ---
+`(` | Moves 1 sentence backward.
+`)` | Moves 1 sentence forward.
+`{` | Moves 1 paragraph backward.
+`}` | Moves 1 paragraph forward.
 
 Object and Word motions are great when writing human-oriented languages, especially when writing long form content. Note, these motions can move you beyond the current line the cursor is on. (ex. Pressing `w` at the end of a line will move you to the next line down.) Also, keep in mind that you can pair these motions with operations such as `d` (delete) or `y` (yank) and prepend numbers to move in multiples.
 
-Left-Right Motions  |   Description
-------------------  |   ------------
-`0` |   Move to the start of the line.
-`$` |   Move to the end of the line.
-`f{char}`   |   Move to the next `{char}` to the right.
-`F{char}`       |   Move to the next `{char}` to the left.
-`t{char}`       |   Move one before the next `{char}` to the right.
-`T{char}`       |   Move after the next `{char}` to the left.
+Left-Right Motions | Description
+--- | ---
+`0` | Move to the start of the line.
+`$` | Move to the end of the line.
+`f{char}` | Move to the next `{char}` to the right.
+`F{char}` | Move to the next `{char}` to the left.
+`t{char}` | Move one before the next `{char}` to the right.
+`T{char}` | Move after the next `{char}` to the left.
 
 Left-right motions are limited to the line you're on, they will never move you beyond the current line. Just like the object and word motions, the search motions on this list can have numbers prepended, such as `2fo` to find the second instance of o on the line. (`{char}` is case-sensitive.)
 
-Up-Down Motions |   Description
---------------- |   -------------
-`G`     |   Jump to the last line.
-`gg`    |   Jump to the first line.
-`:{num}`  |   Jump to the line number.
-`{num}%`    |   Jump to a percentage on the buffer. `50%` would be halfway. 
+Up-Down Motions | Description
+--- | ---
+`G` | Jump to the last line.
+`gg` | Jump to the first line.
+`:{num}` | Jump to the line number.
+`{num}%` | Jump to a percentage on the buffer. `50%` would be halfway. 
 
 Up-down motions move you linewise through a document. While this list is small, their use comes up often.
 
@@ -103,50 +103,50 @@ You can arrange your workspace however you like. The most common arrangement in 
 
 To see a list of buffers use the `:buffers` or `:ls` command. It will produce something like the table below without the column names.
 
-buffer #    |   flags   |   filepath        |   cursorline
----         |   ---     |   ---             |   ---
-1           |   #h      |   "[No Name]"     |   line 1
-3           |   %a +    |   "file/path.md"  |   line 103
+buffer # | flags | filepath | cursorline
+--- | --- | --- | ---
+1 | #h | "[No Name]" | line 1
+3 | %a + | "file/path.md" | line 103
 
 The first column is the buffer number; You can jump between buffers by pairing this number with the `:buffer` command (example: `:buffer 3`). The second column contains a set of flags which provide details about the buffer. See the table below for flag meanings.
 
-Flags   |   Description
----     |   ---
-u	    |	The buffer is unlisted. Some buffers are unlisted by default like the help buffer from the `:help` command; these buffers will only appear via the `:buffers!` command.
-%		|	This is the current buffer displayed on the window.
-\#		|   This is the previous buffer that was displayed on this window, You can jump back to it with `:buffer #`. Jumping between windows does NOT affect this flag, neither does opening unlisted buffers.
-a		|	This buffer is loaded and displayed on a window. The window does not need to be on your screen.
-h		|	This buffer is currently not displayed on a window.
-=		|	This buffer is read-only and cannot be edited 🤞🏾. Technically you can still make edits and overwrite them with `:w!` but it will warn you not to. Use `:set readonly` to set it on the current buffer, `:set noreadonly` to remove readonly.
--		|	This buffer can't be modified, useful when you want to make sure the file really is uneditable. Use `:set nomodifiable` to turn it on and `:set modifiable` to turn it off.
-+		|	This buffer has been modified.
+Flags | Description
+--- | ---
+u | The buffer is unlisted. Some buffers are unlisted by default like the help buffer from the `:help` command; these buffers will only appear via the `:buffers!` command.
+% | This is the current buffer displayed on the window.
+\# | This is the previous buffer that was displayed on this window, You can jump back to it with `:buffer #`. Jumping between windows does NOT affect this flag, neither does opening unlisted buffers.
+a | This buffer is loaded and displayed on a window. The window does not need to be on your screen.
+h | This buffer is currently not displayed on a window.
+= | This buffer is read-only and cannot be edited 🤞🏾. Technically you can still make edits and overwrite them with `:w!` but it will warn you not to. Use `:set readonly` to set it on the current buffer, `:set noreadonly` to remove readonly.
+- | This buffer can't be modified, useful when you want to make sure the file really is uneditable. Use `:set nomodifiable` to turn it on and `:set modifiable` to turn it off.
++ | This buffer has been modified.
 
 The third column is the file's filepath. If the current buffer has no file association, it will print "[No Name]" until you save/write that buffer to a file. The last column is the last cursorline position for that file. That way you don't have to keep jumping back to your place in the file when you move back to that buffer.
 
 Now since we're using windows to work with buffers we should also know some simple window management commands. 
 
-Window Command  |   description
----             |   ---
-`:new`            |   Open a new window horizontally.
-`:vnew`           |   Open a new window vertically.
-`:split`          |   Splits the current window into two horizontal windows. They'll display the same buffer when they first split.
-`:vsplit`         |   Splits the current window into two vertical windows. 
+Window Command | description
+--- | ---
+`:new` | Open a new window horizontally.
+`:vnew` | Open a new window vertically.
+`:split` | Splits the current window into two horizontal windows. They'll display the same buffer when they first split.
+`:vsplit` | Splits the current window into two vertical windows. 
 
-Window Movement |   description
----             |   ---
-`CTRL-w w`        |   Cycle through windows.
-`CTRL-w h`        |   Jump one window to the left. 
-`CTRL-w j`        |   jump one window down. 
-`CTRL-w k`        |   jump one window up. 
-`CTRL-w l`        |   jump one window right. 
-`CTRL-w H`     |   Moves the window toward the left and expands the window to use the screen's full height.
-`CTRL-w J`     |   Moves the window down and expands the window to use the screen's full width.
-`CTRL-w K`     |   Moves the window up and expands the window to use the screen's full width.
-`CTRL-w L`     |   Moves the window toward the right and expands the window to use the screen's full height.
-`CTRL-w -`      |   Decreases window height by one line; you can prepend a number. (ex. `Ctrl-w 10-` will decrease window height by 10 lines.)
-`CTRL-w +`      |   Increases window height by one line; you can prepend a number.
-`CTRL-w <`      |   Decreases window width by one column; you can prepend a number. 
-`CTRL-w >`      |   Increases window width by one column; you can prepend a number.
+Window Movement | description
+--- | ---
+`CTRL-w w` | Cycle through windows.
+`CTRL-w h` | Jump one window to the left. 
+`CTRL-w j` | jump one window down. 
+`CTRL-w k` | jump one window up. 
+`CTRL-w l` | jump one window right. 
+`CTRL-w H` | Moves the window toward the left and expands the window to use the screen's full height.
+`CTRL-w J` | Moves the window down and expands the window to use the screen's full width.
+`CTRL-w K` | Moves the window up and expands the window to use the screen's full width.
+`CTRL-w L` | Moves the window toward the right and expands the window to use the screen's full height.
+`CTRL-w -` | Decreases window height by one line; you can prepend a number. (ex. `Ctrl-w 10-` will decrease window height by 10 lines.)
+`CTRL-w +` | Increases window height by one line; you can prepend a number.
+`CTRL-w <` | Decreases window width by one column; you can prepend a number. 
+`CTRL-w >` | Increases window width by one column; you can prepend a number.
 
 You'll notice that the window commands re-use the same directional syntax as that found in normal mode. Technically you could also use the arrow keys, but I would advise against that. Another thing to note is that the commands for adjusting the window width are non-contextual so they might feel counterintuitive when facing their opposing edges.
 
@@ -219,19 +219,19 @@ The notes are pretty self-explanatory. The first settings let you move between b
 ### What are maps?
 At its core, the `*map` is a root command that tells Neovim to do X when you press Y. But because hotkeys can change depending on what mode you're in, you'll have to be specific about what mode you'd like your map command to apply to.
 
-COMMANDS | MODES                                    
--------- | -----------------------------------------
-:map     | Normal, Visual, Select, Operator-pending 
-:nmap    | Normal                                   
-:vmap    | Visual and Select                        
-:smap    | Select                                   
-:xmap    | Visual                                   
-:omap    | Operator-pending                         
-:map!    | Insert and Command-line                  
-:imap    | Insert                                   
-:lmap    | Insert, Command-line, Lang-Arg           
-:cmap    | Command-line                             
-:tmap    | Terminal                                 
+COMMANDS | MODES
+--- | ---
+`:map` | Normal, Visual, Select, Operator-pending 
+`:nmap` | Normal
+`:vmap` | Visual and Select
+`:smap` | Select
+`:xmap` | Visual
+`:omap` | Operator-pending
+`:map!` | Insert and Command-line
+`:imap` | Insert
+`:lmap` | Insert, Command-line, Lang-Arg
+`:cmap` | Command-line
+`:tmap` | Terminal
 
 From the chart above, a single letter is prefixed to map to indicate a specific mode. `:map` works in most common modes such as Normal, Visual, and Select, but `:imap` works exclusively in Insert mode. This clarifies to Neovim your mapping intentions, but modes are not the only prefix you ought to consider. 
 
@@ -281,19 +281,19 @@ nmap o i
 
 Therefore, it's generally recommended you only use the non-recursive forms of the `*map` commands when creating custom hotkeys. In order to use them simply add "nore" after the mode prefix. Doing so will limit you from extending other hotkeys but it will save you from creating infinite recursions.
 
-COMMANDS    | MODES                                    
------------ | -----------------------------------------
-:noremap    | Normal, Visual, Select, Operator-pending 
-:nnoremap   | Normal                                   
-:vnoremap   | Visual and Select                        
-:snoremap   | Select                                   
-:xnoremap   | Visual                                   
-:onoremap   | Operator-pending                         
-:noremap!   | Insert and Command-line                  
-:inoremap   | Insert                                   
-:lnoremap   | Insert, Command-line, Lang-Arg           
-:cnoremap   | Command-line                             
-:tnoremap   | Terminal                                 
+COMMANDS | MODES
+--- | ---
+:noremap  | Normal, Visual, Select, Operator-pending
+:nnoremap | Normal
+:vnoremap | Visual and Select
+:snoremap | Select
+:xnoremap | Visual
+:onoremap | Operator-pending
+:noremap! | Insert and Command-line
+:inoremap | Insert
+:lnoremap | Insert, Command-line, Lang-Arg
+:cnoremap | Command-line
+:tnoremap | Terminal
 
 Further Reading:
 
