--- a/content/blog/posts/2024-05-15.md
+++ b/content/blog/posts/2024-05-15.md
@@ -283,17 +283,17 @@ Therefore, it's generally recommended you only use the non-recursive forms of th
 
 COMMANDS | MODES
 --- | ---
-:noremap  | Normal, Visual, Select, Operator-pending
-:nnoremap | Normal
-:vnoremap | Visual and Select
-:snoremap | Select
-:xnoremap | Visual
-:onoremap | Operator-pending
-:noremap! | Insert and Command-line
-:inoremap | Insert
-:lnoremap | Insert, Command-line, Lang-Arg
-:cnoremap | Command-line
-:tnoremap | Terminal
+`:noremap`  | Normal, Visual, Select, Operator-pending
+`:nnoremap` | Normal
+`:vnoremap` | Visual and Select
+`:snoremap` | Select
+`:xnoremap` | Visual
+`:onoremap` | Operator-pending
+`:noremap!` | Insert and Command-line
+`:inoremap` | Insert
+`:lnoremap` | Insert, Command-line, Lang-Arg
+`:cnoremap` | Command-line
+`:tnoremap` | Terminal
 
 Further Reading:
 
